# onlineTextEditor

./: .gitignore  LICENSE.ACE  README.md  build-and-run.sh  docker-compose.yml
client/src/: editor.html  index.html  login.html  projectCreator.html  projects-list.html  register.html
client/src/js/: FileChangesCache.js  constants.js  editor.js  editorController.js  editorView.js  filesRepository.js  login.js  projectCreator.js  projectCreatorController.js  projectCreatorView.js  projectRepository.js  projectsList.js  projectsListController.js  projectsListView.js  register.js  userRepository.js
client/src/js/ace/: ace.js
client/src/styles/: editor.css  form.css  style.css  table-style.css
database/: Dockerfile  script.sql
server/: Dockerfile  docker-entrypoint.sh
server/editor-server/: Cargo.toml
server/editor-server/src/: controllers.rs  editor_session.rs  lib.rs  main.rs  models.rs  repositories.rs  server.rs  services.rs  session_manager.rs
server/editor-server/src/controllers/: projects.rs  users.rs
server/editor-server/src/repositories/: file_content_repository.rs  projects.rs  projects_files.rs  users.rs
server/editor-server/src/services/: projects.rs  projects_files.rs
