[package]
name = "editor-server"
version = "0.1.0"
authors = ["ZIemniakoss <rawa.przemek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7"
futures = "0.3.1"
actix-session = "0.4"
actix-redis = "0.9"
postgres = "0.18.1"
rand = "0.7.3"
actix-service = "1"
actix-http = "2"
time = "0.2"
actix-rt = "1"
log = "0.4"
actix-cors = "0.5"
