[package]
name = "editor-server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-cors = "0.5"
actix-http = "2"
actix-redis = "0.9"
actix-rt = "1"
actix-service = "1"
actix-session = "0.4"
actix-web = "3"
actix-web-actors = "3"


env_logger = "0.7"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.1"
postgres = "0.18.1"
rand = "0.7.3"
time = "0.2"
log = "0.4"